--- a/style.css
+++ b/style.css
@@ -10,8 +10,8 @@ body{
   color: #f4fff8;
 }
 .container {
-  max-width: 1200px;
-  margin: 0 auto;
+  max-width: 1000px;
+  margin: 50px;
 }
 h1 {
   font-family: "Russo One", sans-serif;
